--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "App for croudfunding.",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node server.js",
     "compile": "npx truffle compile",
     "console:kovan": "npx truffle console --network kovan",
     "solhint": "solhint ./contracts/**/*.sol",
@@ -15,12 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.2.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-scripts": "3.2.0",
     "chai": "^4.3.0",
     "depcheck": "^1.3.1",
     "eslint": "^6.1.0",
